--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /* IMPORTS */
-@import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"); */
 /* page reset */
 /* Use a more-intuitive box-sizing model */
 *,
